# wing_flutter

./: CMakeLists.txt  README.md  newREADME.md  oldREADME.md
docs/presentation/: flutter.tex
docs/report/: report.typ
include/: CalcMesh.h  CalcNode.h  Element.h  MeshLoader.h
mesh/: CMakeLists.txt  convert.py  ellipse.cpp  ellipse.h5  ellipse.msh  ellipse.xdmf  wing_rounded_ellipse.cpp  wing_rounded_ellipse.msh
src/: CalcMesh.cpp  CalcNode.cpp  MeshLoader.cpp  main.cpp
